test/errors/library-error-typescript/build.ts
import { runAngularPackageBuilder } from '../../..';

runAngularPackageBuilder( [
	'test/errors/packages/library-error-typescript/.angular-package.json'
] ).catch( ( error: Error ) => {
	// Do nothing
} );
